--- a/index.html
+++ b/index.html
@@ -3,30 +3,130 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Van Hamlin Dev Page</title>
 
   <!-- Normalize.css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
 
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+
+  <!-- Bootstrap Icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
 
   <!-- Your custom stylesheet -->
   <link rel="stylesheet" href="styles/style.css" />
 </head>
 
 <body>
-  <!-- Vanilla Layout https://www.w3schools.com/howto/howto_js_topnav.asp-->
-  <div class="topnav">
-    <a class="active" href="#home">Home</a>
-    <a href="#news">News</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
-  </div>
-  <h1>This is a test</h1>
+  <!-- Navigation -->
+  <nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"><i class="bi bi-clipboard-fill"></i> Van Hamlin Dev</a>
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
 
-  <!-- Bootstrap JS Bundle -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <div class="container mt-4">
+    <div class="row">
+      <!-- Developer Profile -->
+      <div class="col-md-4">
+        <h2>👨‍💻 Developer Profile</h2>
+        <div class="card mb-4">
+          <img src="https://picsum.photos/200" class="card-img-top" alt="Developer Image" />
+          <div class="card-body">
+            <h4 class="card-title">John Doe</h4>
+            <p class="card-text">Some example text.</p>
+          </div>
+          <div class="card-footer">
+            <a href="#" class="card-link">Card link</a>
+            <a href="#" class="card-link">Second link</a>
+            <a href="#" class="btn btn-primary btn-sm float-end">See Profile</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Developer Blog -->
+      <div class="col-md-8">
+        <h2 class="mb-4">📜 Developer Blog</h2>
+        <div id="blog-container" class="d-grid gap-3">
+          <!-- Example Blog Entry -->
+          <div class="card shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title">My First Blog Post</h5>
+              <p class="card-text">
+                This is where your blog content will show up. It can include tips, updates, or thoughts about your dev journey.
+              </p>
+              <p class="card-text">
+                <small class="text-muted">Posted on June 12, 2025</small>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- This is the paragraph that changes -->
+        <p id="blogEntry" class="mt-4">Original blog message will go here...</p>
+
+        <!-- Button that triggers the DOM change -->
+        <button id="btnClicky" type="button" class="btn btn-outline-dark mt-2">Click me, please!</button>
+      </div>
+    </div>
+
+    <!-- Projects Section -->
+    <section id="projects" class="mt-5">
+      <h2>💻 Projects</h2>
+      <ul class="list-group mb-4">
+        <li class="list-group-item">My First HTML Page</li>
+        <li class="list-group-item">Dev Profile Card with Bootstrap</li>
+        <li class="list-group-item">This Full Web Project</li>
+      </ul>
+    </section>
+
+    <!-- Resources Section -->
+    <section id="resources" class="mb-5">
+      <h2>📚 Resources</h2>
+      <ul class="list-group">
+        <li class="list-group-item">
+          <a href="https://getbootstrap.com/docs/5.0/utilities/spacing/" target="_blank" rel="noopener noreferrer">
+            Bootstrap 5 Spacing Utilities
+          </a>
+        </li>
+        <li class="list-group-item">
+          <a href="https://getbootstrap.com/docs/5.0/layout/containers/" target="_blank" rel="noopener noreferrer">
+            Bootstrap 5 Containers
+          </a>
+        </li>
+        <li class="list-group-item">
+          <a href="https://www.w3schools.com/bootstrap5/bootstrap_cards.php" target="_blank" rel="noopener noreferrer">
+            W3Schools Bootstrap 5 Cards
+          </a>
+        </li>
+        <li class="list-group-item">
+          <a href="https://getbootstrap.com/docs/5.0/components/navbar/" target="_blank" rel="noopener noreferrer">
+            Bootstrap 5 Navbar
+          </a>
+        </li>
+        <li class="list-group-item">
+          <a href="https://icons.getbootstrap.com/icons/clipboard-fill/" target="_blank" rel="noopener noreferrer">
+            Bootstrap Icons: Clipboard Fill
+          </a>
+        </li>
+      </ul>
+    </section>
+  </div>
+
+  <!-- Footer -->
+  <footer class="bg-secondary text-center text-white py-3">
+    <p class="mb-0">&copy; 2025 Van Hamlin | Built with ❤️ using HTML & Bootstrap 5</p>
+  </footer>
+
+  <!-- Bootstrap Bundle JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
   <!-- Your custom JS -->
   <script src="scripts/script.js"></script>
