--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <div class="card mb-4">
           <img src="https://picsum.photos/200" class="card-img-top" alt="Developer Image" />
           <div class="card-body">
-            <h4 class="card-title">John Doe</h4>
-            <p class="card-text">Some example text.</p>
+            <h4 class="card-title">Van Hamlin </h4>
+            <p class="card-text">vhamlin@una.edu</p>
           </div>
           <div class="card-footer">
             <a href="#" class="card-link">Card link</a>
@@ -121,7 +121,7 @@
 
   <!-- Footer -->
   <footer class="bg-secondary text-center text-white py-3">
-    <p class="mb-0">&copy; 2025 Van Hamlin | Built with ❤️ using HTML & Bootstrap 5</p>
+    <p class="mb-0">&copy; 2025 Van Hamlin. All rights reserved.</p>
   </footer>
 
   <!-- Bootstrap Bundle JS -->
@@ -132,3 +132,5 @@
   <script src="scripts/script.js"></script>
 </body>
 </html>
+
+
