--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="card-body">
               <h5 class="card-title">My First Blog Post</h5>
               <p class="card-text">
-                This is where your blog content will show up. It can include tips, updates, or thoughts about your dev journey.
+                This is where your blog content will show up. 
               </p>
               <p class="card-text">
                 <small class="text-muted">Posted on June 12, 2025</small>
@@ -132,5 +132,4 @@
   <script src="scripts/script.js"></script>
 </body>
 </html>
-
 
