--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Van Hamlin Dev Page</title>
 
-  <!-- Normalize.css -->
+  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
 
-  <!-- Bootstrap CSS -->
+  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 
-  <!-- Bootstrap Icons -->
+  
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
 
-  <!-- Your custom stylesheet -->
+  
   <link rel="stylesheet" href="styles/style.css" />
 </head>
 
@@ -54,7 +54,7 @@
       <div class="col-md-8">
         <h2 class="mb-4">📜 Developer Blog</h2>
         <div id="blog-container" class="d-grid gap-3">
-          <!-- Example Blog Entry -->
+          
           <div class="card shadow-sm">
             <div class="card-body">
               <h5 class="card-title">My First Blog Post</h5>
@@ -81,8 +81,8 @@
       <h2>💻 Projects</h2>
       <ul class="list-group mb-4">
         <li class="list-group-item">My First HTML Page</li>
-        <li class="list-group-item">Dev Profile Card with Bootstrap</li>
-        <li class="list-group-item">This Full Web Project</li>
+        <li class="list-group-item">My first CSS page</li>
+        <li class="list-group-item">My first JavaScript page</li>
       </ul>
     </section>
 
@@ -128,7 +128,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-  <!-- Your custom JS -->
+  
   <script src="scripts/script.js"></script>
 </body>
 </html>
