--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <section id="projects" class="mt-5">
       <h2>💻 Projects</h2>
       <ul class="list-group mb-4">
-        <li class="list-group-item">My First HTML Page</li>
+        <li class="list-group-item">My first HTML Page</li>
         <li class="list-group-item">My first CSS page</li>
         <li class="list-group-item">My first JavaScript page</li>
       </ul>
@@ -132,4 +132,3 @@
   <script src="scripts/script.js"></script>
 </body>
 </html>
-
