--- a/index.html
+++ b/index.html
@@ -5,17 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Van Hamlin Dev Page</title>
 
-  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
-
-  
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-
-  
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
-
-  
   <link rel="stylesheet" href="styles/style.css" />
 </head>
 
@@ -39,7 +32,7 @@
         <div class="card mb-4">
           <img src="https://picsum.photos/200" class="card-img-top" alt="Developer Image" />
           <div class="card-body">
-            <h4 class="card-title">Van Hamlin </h4>
+            <h4 class="card-title">Van Hamlin</h4>
             <p class="card-text">vhamlin@una.edu</p>
           </div>
           <div class="card-footer">
@@ -54,12 +47,11 @@
       <div class="col-md-8">
         <h2 class="mb-4">📜 Developer Blog</h2>
         <div id="blog-container" class="d-grid gap-3">
-          
           <div class="card shadow-sm">
             <div class="card-body">
               <h5 class="card-title">My First Blog Post</h5>
               <p class="card-text">
-                This is where your blog content will show up. 
+                This is where your blog content will show up.
               </p>
               <p class="card-text">
                 <small class="text-muted">Posted on June 12, 2025</small>
@@ -80,9 +72,24 @@
     <section id="projects" class="mt-5">
       <h2>💻 Projects</h2>
       <ul class="list-group mb-4">
-        <li class="list-group-item">My first HTML page</li>
-        <li class="list-group-item">My first CSS page</li>
-        <li class="list-group-item">My first JavaScript page</li>
+
+        
+        <li class="list-group-item">
+          Super Game!
+          <br>
+          <a href="https://van1410.github.io/literate-dollop-superCoolGame/" target="_blank" class="btn-btn-primay">
+            <i class="bi bi-joystick"> SuperGame!</i>
+          </a>
+          <br>
+          <a href="https://github.com/Van1410/literate-dollop-superCoolGame" target="_blank" class="btn-btn-secondary">
+            <i class="bi bi-github"></i>&lt;Source code&gt;
+          </a>
+        </li>
+
+        <!-- Other Projects -->
+        <li class="list-group-item">More Projects to come</li>
+        <li class="list-group-item">More Projects to come</li>
+
       </ul>
     </section>
 
@@ -123,12 +130,14 @@
   <footer class="bg-secondary text-center text-white py-3">
     <p class="mb-0">&copy; 2025 Van Hamlin. All rights reserved.</p>
   </footer>
+  https://wave.webaim.org/report#/https://van1410.github.io/Van1410/
+  https://validator.w3.org/nu/?doc=https%3A%2F%2Fvan1410.github.io%2FVan1410%2F
 
-  <!-- Bootstrap Bundle JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
+  <!-- Bootstrap JS Bundle -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-  
+  <!-- Custom Script -->
   <script src="scripts/script.js"></script>
 </body>
 </html>
