--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Van Hamlin Dev Page</title>
 
-  <!-- Normalize + Bootstrap + Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
@@ -20,8 +19,7 @@
       <a class="navbar-brand" href="#"><i class="bi bi-clipboard-fill"></i> Van Hamlin Dev</a>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-        <!-- ✅ Changed from btn-outline-success to btn-dark -->
-        <button class="btn btn-dark" type="submit">Search</button>
+        <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
     </div>
   </nav>
@@ -52,14 +50,20 @@
           <div class="card shadow-sm">
             <div class="card-body">
               <h5 class="card-title">My First Blog Post</h5>
-              <p class="card-text">This is where your blog content will show up.</p>
-              <p class="card-text"><small class="text-muted">Posted on June 12, 2025</small></p>
+              <p class="card-text">
+                This is where your blog content will show up.
+              </p>
+              <p class="card-text">
+                <small class="text-muted">Posted on June 12, 2025</small>
+              </p>
             </div>
           </div>
         </div>
 
-        <!-- Dynamic Blog Entry -->
+        <!-- This is the paragraph that changes -->
         <p id="blogEntry" class="mt-4">Original blog message will go here...</p>
+
+        <!-- Button that triggers the DOM change -->
         <button id="btnClicky" type="button" class="btn btn-outline-dark mt-2">Click me, please!</button>
       </div>
     </div>
@@ -68,19 +72,9 @@
     <section id="projects" class="mt-5">
       <h2>💻 Projects</h2>
       <ul class="list-group mb-4">
-        <li class="list-group-item">
-          Super Game!
-          <br>
-          <a href="https://van1410.github.io/literate-dollop-superCoolGame/" target="_blank" class="btn-btn-primay">
-            <i class="bi bi-joystick"> SuperGame!</i>
-          </a>
-          <br>
-          <a href="https://github.com/Van1410/literate-dollop-superCoolGame" target="_blank" class="btn-btn-secondary">
-            <i class="bi bi-github"></i>&lt;Source code&gt;
-          </a>
-        </li>
-        <li class="list-group-item">More Projects to come</li>
-        <li class="list-group-item">More Projects to come</li>
+        <li class="list-group-item">My first HTML page</li>
+        <li class="list-group-item">My first CSS page</li>
+        <li class="list-group-item">My first JavaScript page</li>
       </ul>
     </section>
 
@@ -89,19 +83,29 @@
       <h2>📚 Resources</h2>
       <ul class="list-group">
         <li class="list-group-item">
-          <a href="https://getbootstrap.com/docs/5.0/utilities/spacing/" target="_blank">Bootstrap 5 Spacing Utilities</a>
+          <a href="https://getbootstrap.com/docs/5.0/utilities/spacing/" target="_blank" rel="noopener noreferrer">
+            Bootstrap 5 Spacing Utilities
+          </a>
         </li>
         <li class="list-group-item">
-          <a href="https://getbootstrap.com/docs/5.0/layout/containers/" target="_blank">Bootstrap 5 Containers</a>
+          <a href="https://getbootstrap.com/docs/5.0/layout/containers/" target="_blank" rel="noopener noreferrer">
+            Bootstrap 5 Containers
+          </a>
         </li>
         <li class="list-group-item">
-          <a href="https://www.w3schools.com/bootstrap5/bootstrap_cards.php" target="_blank">W3Schools Bootstrap 5 Cards</a>
+          <a href="https://www.w3schools.com/bootstrap5/bootstrap_cards.php" target="_blank" rel="noopener noreferrer">
+            W3Schools Bootstrap 5 Cards
+          </a>
         </li>
         <li class="list-group-item">
-          <a href="https://getbootstrap.com/docs/5.0/components/navbar/" target="_blank">Bootstrap 5 Navbar</a>
+          <a href="https://getbootstrap.com/docs/5.0/components/navbar/" target="_blank" rel="noopener noreferrer">
+            Bootstrap 5 Navbar
+          </a>
         </li>
         <li class="list-group-item">
-          <a href="https://icons.getbootstrap.com/icons/clipboard-fill/" target="_blank">Bootstrap Icons: Clipboard Fill</a>
+          <a href="https://icons.getbootstrap.com/icons/clipboard-fill/" target="_blank" rel="noopener noreferrer">
+            Bootstrap Icons: Clipboard Fill
+          </a>
         </li>
       </ul>
     </section>
@@ -109,13 +113,24 @@
 
   <!-- Footer -->
   <footer class="bg-secondary text-center text-white py-3">
-    <p class="mb-0">&copy; 2025 Van Hamlin. All rights reserved.</p>
+    <p class="mb-1">&copy; 2025 Van Hamlin. All rights reserved.</p>
+    <p class="mb-0">
+      Accessibility Report: 
+      <a href="https://wave.webaim.org/report#/https://van1410.github.io/Van1410/" target="_blank" rel="noopener noreferrer" class="text-white text-decoration-underline">
+        WAVE
+      </a> | 
+      HTML Validation: 
+      <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fvan1410.github.io%2FVan1410%2F" target="_blank" rel="noopener noreferrer" class="text-white text-decoration-underline">
+        W3C Nu Validator
+      </a>
+    </p>
   </footer>
 
-  <!-- JS -->
+  <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+  <!-- Custom Script -->
   <script src="scripts/script.js"></script>
 </body>
 </html>
