--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a class="navbar-brand" href="#"><i class="bi bi-clipboard-fill"></i> Van Hamlin Dev</a>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-        <!-- ✅ Changed from btn-outline-success to btn-dark -->
+        
         <button class="btn btn-dark" type="submit">Search</button>
       </form>
     </div>
@@ -124,7 +124,7 @@
     </p>
   </footer>
 
-  <!-- JS -->
+  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
