--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
       <a class="navbar-brand" href="#"><i class="bi bi-clipboard-fill"></i> Van Hamlin Dev</a>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-        
         <button class="btn btn-dark" type="submit">Search</button>
       </form>
     </div>
@@ -61,6 +60,11 @@
         <!-- Dynamic Blog Entry -->
         <p id="blogEntry" class="mt-4">Original blog message will go here...</p>
         <button id="btnClicky" type="button" class="btn btn-outline-dark mt-2">Click me, please!</button>
+
+        <!-- Blog Admin button -->
+        <a href="https://van1410.github.io/blog-admin/" target="_blank" class="btn btn-primary mt-3">
+          Open Blog Admin
+        </a>
       </div>
     </div>
 
@@ -128,6 +132,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+  <!-- Added jQuery library for ajax -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="scripts/script.js"></script>
 </body>
 </html>
+
